[ASTERIXDB-3396][CONF] Tweak memory, '-add-opens' flags
- user model changes: no
- storage format changes: no
- interface changes: no

Details:
In JDK17, we are encountering module access errors that
appear in the log. This is due to not having the right
access flags added to the JVM

Additionally, the NCService integration tests are failing
due to memory overuse. This patch tweaks the default allocation
to be 50% instead of 60% of the host memory.

Change-Id: I13ec2c1063754b93d1fad551362134c0d1c593d5
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/18271
Reviewed-by: Ian Maxon <imaxon@uci.edu>
Reviewed-by: Michael Blow <mblow@apache.org>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>